# erl_serv

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  build.sh  init.sh  pkg.vars.config  rebar  rebar.config  relx  relx.config
ebin/: account_types.beam  captcha_types.beam  date_types.beam  location_types.beam  nakama_types.beam  profile_types.beam  serv.app  serv.beam  serv_app.beam  serv_sup.beam  service_thrift.beam  time_types.beam  user_types.beam
include/: serv.hrl  serv_pb.hrl  serv_spdy.hrl
rel/: gen_dev  rebar.config  reltool.config  vars.config
src/: CMakeLists.txt  client.cpp  client.erl  echo.erl  serv.app.src  serv.erl  serv.proto  serv_app.erl  serv_chat.erl  serv_console.erl  serv_db.erl  serv_pb_codec.erl  serv_protocol.erl  serv_session.erl  serv_session_map.erl  serv_spdy.erl  serv_stat.erl  serv_stream.erl  serv_sup.erl  serv_vnode.erl  serv_worker.erl  utils.erl
src/fsm/: fsm.erl  serv_fsm_get.erl  serv_fsm_put.erl
src/pb/: serv_pb_codec.erl  serv_pb_handler.erl  serv_pb_listener.erl  serv_pb_server.erl  serv_pb_session.erl  serv_pb_session_map.erl  serv_pb_session_map.hrl  serv_pb_sup.erl
src/pb/handler/: serv_pb_handler_common.erl
src/pb/service/: serv_pb_service_common.erl
src/serv/: serv.proto  serv_handler.erl  serv_pb_codec.erl  serv_session.erl  serv_session_map.erl
src/serv/handler/: serv_chat_handler.erl  serv_common_handler.erl  serv_common_handler.erl~
src/spdy/: serv_spdy.erl  serv_spdy_session.erl  spdy_client.erl
src/thrift/: Makefile  echo.thrift  user.thrift
src/vnode/: serv_vnode.erl  serv_vnode_entry.erl  serv_vnode_stat.erl
src/wm/: serv_wm_ping.erl
(+87 files in other folders)
